
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int exit (int) ;
 int printf (char*,char*) ;

void printe(char *err,short e){
printf("[!] %s\n",err);
if(e)exit(1);
return;
}
